scripts/gh-book/gh-book.less
/* Similar to bookish/styles/main.less, but here so we can correctly import
 * from bower_components. */

/* Bootstrap */
@import "../../bower_components/bootstrap/less/bootstrap.less";
/* Font-Awesome */
@import "../../bower_components/font-awesome/build/assets/font-awesome/less/font-awesome.less";

/* App Styles */
@import "../../bower_components/bookish/styles/global.less";
@import "../../bower_components/bookish/styles/workspace/workspace.less";

.x-media-type-icon(@media-type; @add-title; @color; @char) {
  @mt-selector: ~"[data-media-type='@{media-type}']";
  @{mt-selector} > .icon-content::before { color: @color; content: @char; }
  @{mt-selector} > .add-content-title::before { content: "New " @add-title; color: black; }
}

.x-media-type-icon('application/xhtml+xml';              "content/module"; #999;       "\f0f6"); /* icon-file-alt */
.x-media-type-icon('application/oebps-package+xml';      "Book";           @toc-color; "\f02d"); /* icon-book */
.x-media-type-icon('application/vnd.org.cnx.section';    "book division";  #999;       ""); /* icon-folder-open */

#login-advanced-wrapper {
    margin-top: 1em;
    #login-advanced {
        margin-top: 1em;
    }
}

#login-anonymous {
  margin-top: 1em;
}

#menu-and-content .content-panel {
  height: calc(~"100% - 33px");
  height: -moz-calc(~"100% - 33px");
}

.btn-primary, .btn-group.open .btn-primary.dropdown-toggle{
  .buttonBackground(#3AAEB3, #23979B); // This blue doesn't clash as much with our colors
}

.picker-drag-training-wheel{
  position: absolute;  
  bottom: 0;
  right: -7px;
  content: url(picker-drag-training-wheel.png);
  z-index: 2;
}

nav#workspace-sidebar-toc{
  padding-bottom: 111px; // 81px from the training wheel image, not really sure why ~30px extra is needed
}

@font-face {
  font-family: OERPUBFont;
  src: url('oerpubfont.woff'), url('oerpubfont.eot');
} 

#menu .navbar {

  .btn-group {
    margin-top: 3px;
  }

  .iconset {
  
    position: relative;
    
    & + .iconset {
      margin-left: 5px;
      padding-left: 10px;
    }
  
    & + .iconset:before { /* "Pipe" to separate groups of buttons (done this way so it doesn't need to be as tall) */
      content: "";
      position: absolute;
      left: 0;
      top: 15%;
      width: 1px;
      height: 70%;
      border-left: 1px solid #aaa;
    }

    .btn {
      border-radius: 0;
      border: 1px solid transparent;
      box-shadow: none;
      background-image: none;
      background-color: transparent;
      color: #000;
      width: 34px;
      height: 34px;
      padding: 0;
    
      &.dropdown-toggle {
        width: auto;
        padding: 0 6px;
      }
      &:hover{
        background-color: rgba(175,220,246,0.4);
        border-color: #bbb;
      }
      &.active {
        border-color: #bbb;
        background-color: transparent;
        * {
          color: #1b86d2;
        }
      }
    
    }
  
  }
  
  .btn.disabled, .btn[disabled] {
    background-color: transparent;
    opacity: 1;
  }
  .btn.disabled *, .btn[disabled] *{ /* The bootstrap looks more active than disabled */
    opacity: .3;
  }
  .btn.disabled:hover, .btn[disabled]:hover{
    background-color: transparent;
    border-color: transparent;
  }
  
  [class^="icon-"], [class*=" icon-"] {
    font-family: OERPUBFont;
    font-size: 22px;
    line-height: 34px;
  }
  .icon-paste{ /* No custom icon for paste yet */
    font-family: FontAwesome;
    font-size: 14px;
  }
  
  .icon-bold:before {
    content: "\e010";
  }
  .icon-italic:before {
    content: "\e00e";
  }
  .icon-underline:before {
    content: "\e003";
  }
  .icon-superscript:before {
    content: "\e008";
  }
  .icon-superscript *:before {
    content: "";
  }
  .icon-subscript:before {
    content: "\e009";
  }
  .icon-subscript *:before {
    content: "";
  }
  .icon-link:before {
    content: "\e00d";
  }
  .icon-list-ul:before {
    content: "\e006";
  }
  .icon-list-ol:before {
    content: "\e00b";
  }
  .icon-indent-right:before {
    content: "\e002";
  }
  .icon-indent-left:before {
    content: "\e001";
  }
  .icon-picture:before {
    content: "\e000";
  }
  .icon-table:before {
    content: "\e004";
  }
  .icon-math:before {
    content: "\e00c";
  }
  .icon-math *:before {
    content: "";
  }

}

.migration-container {
  p.success span, p.fail span {
    font-family: FontAwesome;
    font-size: 14px;
  }
  span.migration-result:before {
    content: "\f141";
    font-family: FontAwesome;
    font-size: 14px;
  }
  p.success {
    span:before {
      content:  "\f00c";
    }
    &.completed {
      background-color: #DEFF99;
    }
    &.skipped {
      background-color: #FFFFFF;
    }
  }
  p.fail {
    background-color: #EEA6A6;
    span:before {
      content:  "\f00d";
    }
  }
  p.migration-complete {
    font-weight: bold;
    font-size: 120%;
  }
}

#fork-book-modal {
  .organisation-block {
    cursor: pointer;
    img {
      height: 45px;
      width: 45px;
    }
    span {
      margin-left: 0.5em;
    }
  }
}

